--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ certifi==2017.4.17
 chardet==3.0.4
 idna==2.5
 pkg-resources==0.0.0
+python-dateutil==2.6.1
 requests==2.18.1
+six==1.10.0
 urllib3==1.21.1
