--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dateutil = "^2.8.0"
 requests = "^2.22.0"
 
 [tool.poetry.dev-dependencies]
+black = "=19.3b0"
 
 [build-system]
 requires = ["poetry>=0.12"]
