--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.22.0"
 
 [tool.poetry.dev-dependencies]
 black = "=19.3b0"
+pylint = "^2.3.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
